modules/webgl/tests/cpp-macro-01.vs.exp
"cpp-macro-01.vs":21: L0001: Parse error:
#  line 20 30
intx pass;
void
main()
{
    return;
}

