modules/webgl/tests/cpp-macro-01.vs
#  line 20 30
intx pass;
void
main()
{
    return;
}
